--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation "androidx.ads:ads-identifier:1.0.0-alpha05"
-    implementation files('libs/appverxo_android_sdk-release_v1.0.aar')
+    implementation files('libs/appverxo_sdk-1.3.0.aar')
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
